
2012-06-06  Jihoon Kim

	* edje_entry: display preedit string even though there is no attribute

2012-06-20  Kim Shinwoo

	* Add edje_object_access_part_list_get and acess flags in edc file.

2012-06-21  Carsten Haitzler (The Rasterman)

        * Improve edje_cc slightly to use prefix for full path to
        embryo_cc. this still like before requires embryo and edje to share
        the same install prefix for edje_cc to work.

2012-06-12  Michael Bouchaud (yoz)

	* The aliases are now inherited from the targeted group
	* Aliases can be usable with edje programs, if the part is in the
	group

2012-06-24  Cedric Bail

	* Emit signal for flagged part when their size get to zero.

2012-07-03  Tom Hacohen (TAsn)

	* Entry: Update anchors from user_insert as well.

2012-07-12  Tom Hacohen (TAsn)

	* Textblock: Fixed issue with updating only the font size using text
	classes.
	* Textblock: Fixed updating textblock text_class with
	edje_text_class_set.
	* Text classes: Fixed edje_text_class_set to behave like
	edje_object_text_class_set (and as expected) wrt NULL fonts.

2012-07-12  Cedric Bail

	* Warn at compile time about forgotten image definition.
	* Stop compilation when clipping to a non RECT part.

2012-07-14  Cedric Bail

	* Fix Edje_Multisense shutdown.

2012-07-24  Carsten Haitzler (The Rasterman)

        * Fix edje entry to extend selection to char pos/word or line
        when holding shift + mouse click.

2012-07-29  Cedric Bail

	* Reduce potential reentrant issue when using edje_object_signal_emit.

2012-08-06  Cedric Bail

	* Call edje_object_message_signal_process also on GROUP part Edje object.

2012-08-07  Cedric Bail

	* Fix memory leak when Edje file have alias defined.

2012-08-09  Cedric Bail

	* Improve speed of color_class lookup by using an Eina_Hash.

2012-08-14  Hermet

	* Fix the uv mapping correctly in case of image swallowed.

2012-08-21  Guilherme Silveira

	* Fix password timeout with fixed point.